--- a/style.css
+++ b/style.css
@@ -1,26 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap');
-
+body{
+  background-size: cover;
+  background-image: url(https://images.pexels.com/photos/2114014/pexels-photo-2114014.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
+}
 div{
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-bottom: 20px;
-  background-size: cover;
-  background-image: url(https://images.pexels.com/photos/2114014/pexels-photo-2114014.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2)
-  
 }
+
 
 h1, h3{
   font-family: "Tangerine", serif;
+  font-size: 48px;
 }  
 
 img{
-  padding: 16px;
+  padding: 14px;
   border: solid 4px #F5F5F5;
   border-radius: 100px;
   background-color: #DDDBDB ;
+  outline: #C7C6C1 5px solid;
 }
 header{
-  opacity: 0.7;
+  position: relative;
+  animation: mymove 3s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-out;
+}
+@keyframes mymove {
+  from {left: -200px;}
+  to {left: 50px;}
+}
+
+section{
+  display: flex;
+  justify-content: center;
+  gap: 60px;
   
 }
